--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
