--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -19,15 +20,15 @@
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
-    "next": "15.0.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.13",
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.11",
     "@types/scheduler": "^0.23.0",
@@ -38,6 +39,6 @@
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   }
 }
