--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "next": "^15.0.3",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
