feat: implement admin layout and loader, enhance user role management, and update order API

--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
-    "@reduxjs/toolkit": "^2.4.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
+    "imagekitio-next": "^1.0.1",
+    "install": "^0.13.0",
+    "jodit-react": "^5.0.10",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "next": "^15.0.3",
